Refactoring of public entity fields to private using lombok @Getter/@Setter